# poke-poke

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  octopus-gallery.html  octopus-mascot-8x8.html  package.json  pnpm-lock.yaml  vitest.config.ts
.cursor/: hooks.json
.cursor/hooks/: pokepokeCursorStop.py  runPokepokeNotify.sh
.cursor/rules/: poke-poke-project.mdc
cli/: pokepoke
docs/: harness-engineering-strategy.md  harness-platform-strategy.md  hook-events.md  popup-focus-issue.md  product-spec.md  reliability-todo.md  session-lifecycle-refactor.md  session-list-architecture.md  settings-todo.md  test-cases.md  test-plan-final.md  test-plan.md
docs/agent-postmortems/: README.md
docs/briefs/: 20260417-hook-reliability-p0-terminal-cc.md  20260417-protocol-upgrade-p1a.md  20260417-test-baseline-phase1.md  20260417-test-baseline-phase2-rust.md  20260418-hook-self-bootstrap.md  README.md
docs/tasks/: taskC-session-lifecycle.md
docs/templates/: agent-task-brief.md
scripts/: claude-code-pre-tool.py  claude-code-stop.py  focus-probe.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  http_server.rs  lib.rs  main.rs  notifications.rs  popup.rs  sessions.rs  settings.rs  shortcut.rs  sound.rs  tray.rs
src/clawd/: Clawd.tsx  clawd.css
src/i18n/: context.tsx  i18n.test.ts  strings.ts
src/icons/: SourceIcon.test.ts  SourceIcon.tsx  source-icon.css
src/panel/: NotificationPanel.tsx  SessionPanel.test.ts  SessionPanel.tsx  panel.css
src/popup/: PopupWindow.tsx  popup.css
src/settings/: SettingsWindow.test.ts  SettingsWindow.tsx  settings.css
src/test/: setup.ts
