[package]
name = "poke-poke"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "poke-poke"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "poke_poke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "poke-hook"
path = "src/bin/hook.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
ureq = "2"
toml_edit = "0.22"

# 仅 macOS：通过 objc2 给 popup 的 NSWindow 设 NonactivatingPanel styleMask，
# 解决 Tauri v2 .focused(false) 在 macOS 上不生效、popup 抢焦点的问题。
# 只用到了裸 msg_send!，所以这里只需 objc2 本体；
# 版本与 Tauri 自身使用的传递依赖一致，避免引入多份同名 crate。
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"

