[package]
name = "poke-poke"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "poke-poke"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "poke_poke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "poke-hook"
path = "src/bin/hook.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
ureq = "2"
toml_edit = "0.22"

# 仅 macOS：通过 tauri-nspanel 把 popup 窗口构造成真正的 NSPanel
# （can_become_key_window = false），从窗口模型层面彻底避免弹窗抢焦点。
# 不走 crates.io，因为上游暂未发布 release tag；锁 commit rev 保证可复现。
# 分支 v2.1 对应 Tauri 2.x。需要 tauri feature "macos-private-api"。
[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }

[dev-dependencies]
tempfile = "3.27.0"

